--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open  --port=4000",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port=5000"
   },
   "dependencies": {
     "axios": "^1.6.6",
