--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview --port=5000"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "axios": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-virtualized-auto-sizer": "^1.0.21",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
